@@ -3,6 +3,9 @@ version <unreleased>
 Core
 * [postprocessor/ffmpeg] Fix metadata filename handling on Python 2 (#13182)
 
+Extractors
+* [youku] Fix extraction (#13191)
+
 
 version 2017.05.23
 
